<resources>
    <string name="app_name">Phh Flashlight</string>
    <string name="flash_strength_count">Flash strength: %s</string>
    <string name="flashlight_state">Flash %s</string>
    <string name="quit">Quit</string>
    <string name="fingerprint_color">Fingerprint Color</string>
    <string name="_00ff00">#00ff00</string>
    <string name="set_color">Set Color</string>
    <string name="set_default">Set Default</string>
</resources>